--- a/.gitignore
+++ b/.gitignore
@@ -17,15 +17,18 @@ sceptre/values/*
 sceptre/templates/*
 !sceptre/templates/DO_NOT_DELETE
 !sceptre/templates/custom*
-terraform/tffiles/.terraform/*
+network-sample/tffiles/.terraform/*
 backendcredentials
 deployercredentials
-terraform/tffiles/tfplan
-!terraform/tfbuild/DO_NOT_DELETE
-terraform/tfbuild/*
+network-sample/tffiles/tfplan
+!network-sample/tfbuild/DO_NOT_DELETE
+network-sample/tfbuild/*
 .terraform
 tfplan
-terraform/modules/*
-!terraform/modules/DO_NOT_DELETE
+network-sample/modules/*
+!network-sample/modules/DO_NOT_DELETE
 */main.tfvars
 network-sample/variables/main.tfvars
+network-sample/environments/networkaccount/iam/terraform.tfstate.d/
+network-sample/environments/networkaccount/vpc/terraform.tfstate.d/
+network-sample/environments/networkaccount/nat/terraform.tfstate.d/
