--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,7 @@ network-sample/variables/main.tfvars
 network-sample/environments/networkaccount/iam/terraform.tfstate.d/
 network-sample/environments/networkaccount/vpc/terraform.tfstate.d/
 network-sample/environments/networkaccount/nat/terraform.tfstate.d/
+network-sample/environments/networkaccount/nat/.terraform.lock.hcl
+network-sample/environments/networkaccount/vpc/.terraform.lock.hcl
+network-sample/environments/networkaccount/iam/.terraform.lock.hcl
+network-sample/environments/networkaccount/ec2/.terraform.lock.hcl
